fix: border collapse for full colour on table rows and columns

--- a/style.css
+++ b/style.css
@@ -29,7 +29,9 @@ h1{
 .giallo{
     background-color: yellow;
 }
-
+table{
+    border-collapse: collapse;
+}
 thead{
     background-color: #20A9E5;
     color: white;
